Bug 90903 - egl_dri2.c:dri2_load fails to load libglapi on osx
Summary: egl_dri2.c:dri2_load fails to load libglapi on osx
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: EGL (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-08 20:19 UTC by Julien Isorce
Modified: 2015-07-09 11:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
egl/dri2: load libglapi.0.dylib on osx (780 bytes, text/plain)
2015-06-08 20:19 UTC, Julien Isorce
Details
es2gears_x11 and es2_info with llvmpipe on osx (265.93 KB, image/png)
2015-06-18 23:13 UTC, Julien Isorce
Details

Description Julien Isorce 2015-06-08 20:19:33 UTC
Created attachment 116374 [details]
egl/dri2: load libglapi.0.dylib on osx

egl can be built on osx (with patches #90311, #90310, #90249) but it fails at runtime.
Comment 1 Julien Isorce 2015-06-18 23:13:17 UTC
Created attachment 116583 [details]
es2gears_x11 and es2_info with llvmpipe on osx

Running gears with egl/gles2/x11 with llvmpipe software driver on osx.
Comment 2 Emil Velikov 2015-07-09 11:07:58 UTC
Pushed to master. Thanks !


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.